LUMI-002 | Ola | Update Dockerfile to use vertx/vertx3-alpine